--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://SameerJoshiCSE.github.io/temp/part0",
+  "homepage": "http://SameerJoshiCSE.github.io/Full_Stack",
   "name": "part1_1.1_1.2",
   "version": "0.1.0",
   "private": true,
